--- a/css/styles.css
+++ b/css/styles.css
@@ -1,170 +1,5 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9; 
-    margin: 0;
-    padding: 0;
-}
-
-h2 {
-    text-align: center;
-    color: #4a90e2; 
-    font-size: 2em;
-    margin-top: 20px;
-}
-
-.hidden {
-    display: none;
-}
-
-.visible {
-    display: block;
-}
-
-.game-container, .controls, .game-board-section {
-    margin: 20px;
-    padding: 20px;
-    background-color: #ffffff; 
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-}
-
-h3 {
-    text-align: center;
-    color: #333;
-    font-size: 1.5em;
-}
-
-button {
-    background-color: #4CAF50; 
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    margin: 10px 0;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-
-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-}
-
-#password-entry {
-    text-align: center;
-    margin-top: 40px;
-}
-
-input[type="text"] {
-    padding: 10px;
-    font-size: 1em;
-    width: 250px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
+#teamOne, #teamTwo{
     margin-right: 10px;
-    transition: border-color 0.3s ease;
+    border-bottom: 20px;
 }
 
-input[type="text"]:focus {
-    border-color: #4CAF50;
-}
-
-#role-selection p {
-    text-align: center;
-    font-size: 1.2em;
-    color: #555;
-}
-
-#ship-placement {
-    text-align: center;
-}
-
-#ship-select, #orientation {
-    padding: 10px;
-    margin: 10px;
-    border-radius: 5px;
-    font-size: 1em;
-    border: 1px solid #ccc;
-    background-color: #fff;
-}
-
-#game-board-section {
-    display: flex; 
-    justify-content: space-between;
-    margin: 20px 0;
-}
-
-table {
-    border-collapse: collapse;
-    width: 48%; 
-    margin: 0 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-td, th {
-    border: 1px solid #ddd;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-}
-
-th {
-    background-color: #f0f8ff;
-    color: #333;
-    font-weight: bold;
-}
-
-td {
-    background-color: #e6f7ff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-td.ship {
-    background-color: #add8e6; 
-}
-
-td.hit {
-    background-color: #ff6961;
-}
-
-td.miss {
-    background-color: #d3d3d3; 
-}
-
-td:hover {
-    background-color: #b3e0ff;
-}
-
-#game-status {
-    margin-top: 20px;
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 1.2em;
-}
-
-#game-status p {
-    margin: 5px 0;
-    color: #555;
-}
-
-#game-status span {
-    font-weight: bold;
-    color: #4CAF50;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 40px;
-}
